--- a/sse-producer/build.gradle
+++ b/sse-producer/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.28'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
